--- a/Dependency_Injection/.project
+++ b/Dependency_Injection/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SpringWithDB</name>
+	<name>Dependency_Injection</name>
 	<comment></comment>
 	<projects>
 	</projects>
